--- a/PyProg/fast-clear-wrmsse-18ms.ipynb
+++ b/PyProg/fast-clear-wrmsse-18ms.ipynb
@@ -594,23 +594,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+2"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -622,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +663,7 @@
        "       1.71293871e-01, 6.98666667e-02, 2.81004710e-01])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +716,7 @@
        "(42840,)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +738,7 @@
        "       1.58512584e-06, 1.58512584e-06, 0.00000000e+00])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,12 +802,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "sw_df = pd.DataFrame(np.stack((S, W, SW), axis=-1),index = roll_index,columns=['s','w','sw'])\n",
-    "sw_df.to_pickle('adata/sw_df.pkl')"
+    "sw_df.to_pickle('adata/sw_df.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sw_df.to_csv('adata/sw_df.csv')"
    ]
   },
   {
@@ -841,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,14 +935,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.1 ms ± 207 µs per loop (mean ± std. dev. of 5 runs, 100 loops each)\n"
+      "14.5 ms ± 116 µs per loop (mean ± std. dev. of 5 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -960,14 +956,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 ms ± 103 µs per loop (mean ± std. dev. of 5 runs, 100 loops each)\n"
+      "20.4 ms ± 85.1 µs per loop (mean ± std. dev. of 5 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -989,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +994,7 @@
        "5.288906059212606"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1015,7 @@
        "5.288906059212606"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
