--- a/PyProg/m5-three-shades-of-dark-darker-magic.ipynb
+++ b/PyProg/m5-three-shades-of-dark-darker-magic.ipynb
@@ -22,6 +22,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lightgbm as lgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `pd.to_feather` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "?pd.to_feather"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -267,8 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "########################### Vars\n",
-    "#################################################################################\n",
+    "########################### Vars  #####################################################\n",
     "VER = 1                          # Our model version\n",
     "SEED = 42                        # We want all things\n",
     "seed_everything(SEED)            # to be as deterministic \n",
@@ -915,8 +940,7 @@
     }
    ],
    "source": [
-    "########################### Predict\n",
-    "#################################################################################\n",
+    "########################### Predict ##########################################\n",
     "\n",
     "# Create Dummy DataFrame to store predictions\n",
     "all_preds = pd.DataFrame()\n",
@@ -1078,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
